--- a/src/components/ui/Checkbox/Checkbox.module.css
+++ b/src/components/ui/Checkbox/Checkbox.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
 
   input {
     position: absolute;
@@ -11,6 +12,13 @@
 
     &:checked ~ .checkmark:after {
       display: block;
+    }
+  }
+
+  &:has(input:disabled) {
+    cursor: not-allowed;
+    .label {
+      color: #8a8686;
     }
   }
 }
