--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -1,4 +1,4 @@
-.container {
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,4 +7,8 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.1),
     inset 0 -1px 1px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.5);
   cursor: pointer;
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
