--- a/src/components/ui/Checkbox/Checkbox.module.css
+++ b/src/components/ui/Checkbox/Checkbox.module.css
@@ -1,4 +1,4 @@
-.container {
+.checkbox {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -25,8 +25,8 @@
 
 .checkmark {
   position: relative;
-  height: 12px;
-  width: 12px;
+  height: 14px;
+  width: 14px;
   background-color: #e4e0e0;
   border: 1px solid #8a8686;
   border-radius: 4px;
