--- a/src/components/ViewCats/ViewCats.module.css
+++ b/src/components/ViewCats/ViewCats.module.css
@@ -1,9 +1,8 @@
-.container {
+.viewCats {
   max-width: 500px;
-  max-height: calc(100vh - 80px);
   padding: 20px;
   display: grid;
-  grid-template-rows: repeat(3, auto) 1fr;
+  grid-template-rows: repeat(3, auto) calc(100vh - 300px);
   row-gap: 15px;
   background-color: white;
 }
@@ -19,4 +18,13 @@
 
 .pic {
   /* height: 300px; */
+}
+
+.loading {
+  justify-self: center;
+}
+
+.error {
+  justify-self: center;
+  color: red;
 }
